force-app/main/default/objects/Form_Config__mdt/Form_Config__mdt.object-meta.xml
<CustomObject>
    <label>Form Config</label>
    <pluralLabel>Form Configs</pluralLabel>
</CustomObject>