force-app/main/default/objects/Form_Config__mdt/fields/Button_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Button_Config_JSON__c</fullName>
    <description>JSON object to override button labels. Keys: cancel, next, previous, submit, save, finish, saveAndUpload, saveAndFinish, saveAndAttach.</description>
    <label>Button Config JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>