force-app/main/default/objects/Form_Config__mdt/fields/Display_Mode__c.field-meta.xml
<CustomField>
    <fullName>Display_Mode__c</fullName>
    <label>Display Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Page</fullName>
                <default>true</default>
                <label>Single Page</label>
            </value>
            <value>
                <fullName>Wizard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>