force-app/main/default/objects/Form_Config__mdt/fields/Form_Icon__c.field-meta.xml
<CustomField>
    <fullName>Form_Icon__c</fullName>
    <label>Form Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>