force-app/main/default/objects/Form_Config__mdt/fields/Form_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Form_Instructions__c</fullName>
    <description>Add static messages and instructions to this field. It will appear at the top of the form. Supports HTML tags</description>
    <label>Form Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>