force-app/main/default/objects/Form_Config__mdt/fields/Save_Without_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Save_Without_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if records created by this form might have their ownership changed immediately (e.g., via Case Assignment Rules), to prevent cross-reference DML errors.</description>
    <inlineHelpText>Check this box if records created by this form might have their ownership changed immediately (e.g., via Case Assignment Rules), to prevent cross-reference DML errors.</inlineHelpText>
    <label>Save Without Sharing</label>
    <type>Checkbox</type>
</CustomField>